Fix file input control alignment issue with form-control (bsc#873203)

--- a/branding/css/spacewalk-fixes.less
+++ b/branding/css/spacewalk-fixes.less
@@ -12,3 +12,7 @@
         margin-bottom: 0;
         padding-top: 7px;
 }
+
+input[type="file"].form-control {
+    height: 100%;
+}
